# koompi-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md
desktop/: Cargo.toml  NOTE.txt  README.md
desktop/src/: background.rs  configs.rs  constants.rs  desktop.rs  desktop_item.rs  desktop_manager.rs  errors.rs  gui.rs  main.rs  proxy_message.rs  styles.rs  window_state.rs  window_viewport.rs
desktop/src/background/: placement.rs  thumbnail.rs  thumbnail_size.rs  wallpaper_error.rs  wallpaper_item.rs  wallpaper_type.rs
desktop/src/configs/: background_conf.rs  config.rs  desktop_item_conf.rs  persistent_data.rs  resources.rs  wallpaper_conf.rs
desktop/src/desktop_item/: desktop_entry.rs  desktop_item_error.rs  desktop_item_icon_flags.rs  desktop_item_launch_flags.rs  desktop_item_load_flags.rs  desktop_item_status.rs  desktop_item_type.rs  encoding.rs
desktop/src/gui/: background_config.rs  color_config.rs  context_menu.rs  desktop.rs  desktop_config.rs  has_changed.rs  styles.rs  wallpaper_config.rs
panel/: Cargo.toml  build.rs
panel/src/: controllers.rs  controls.rs  create_window.rs  helper.rs  iced_panel.rs  main.rs  panel_viewport.rs  proxy_message.rs  sound.rs  state.rs  strut.rs  styles.rs  task_manager.rs  viewport.rs  views.rs  window_state.rs
panel/src/containers/: mainloop.rs  mod.rs  panel_view.rs  window.rs
panel/src/controllers/: common.rs  context_state.rs  menu_state.rs  panel_state.rs
panel/src/helper/: constant.rs  event_queue.rs
panel/src/styles/: buttonstyle.rs  containers.rs  progress_bar.rs  slider.rs
panel/src/task_manager/: taskmanager.rs
panel/src/test/: iced_panel.rs  multi_state.rs  panel_viewport.rs  panelwin.rs  viewport.rs
panel/src/views/: applets.rs  battery.rs  common.rs  context_menu.rs  controls.rs  monitor.rs  panel.rs  sound.rs  wifi_pwd.rs  wireless.rs
src/: main.rs  panel.rs  styles.rs
src/panel/: controls.rs  panelwin.rs
src/styles/: buttonstyle.rs  containers.rs
