[package]
name = "koompi-desktop"
version = "0.1.0"
authors = ["veasnama <maveasnalearntosolve@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced_winit = "*"
iced_wgpu = {git = "https://github.com/veasnama/iced.git", branch="iced_intergration"}
iced_winit = { git = "https://github.com/veasnama/iced.git", branch="iced_intergration"}
env_logger = "0.8.3"
iced = "*"