[package]
name = "koompi-desktop"
version = "0.1.0"
authors = ["veasnama <maveasnalearntosolve@gmail>"]
edition = "2018"
description = "Desktop Graphical Shell for KOOMPI OS"
license = "MIT"
repository = "https://github.com/koompi/koompi-desktop"
readme = "README.md"
keywords = ["gui", "ui", "desktop", "shell", "desktop-shell"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
   "desktop",
   "panel"
]
[dependencies]
desktop = { version = "0.0.1", path = "desktop" }
panel = { version = "0.0.1", path = "panel" }
