[package]
name = "desktop"
version = "0.1.0"
authors = ["leang27 <hangleang127@gmail.com>"]
edition = "2018"
description = "Desktop GUI for KOOMPI OS"
license = "MIT"
repository = "https://github.com/koompi/koompi-desktop"
readme = "README.md"
keywords = ["gui", "ui", "desktop", "shell", "desktop-shell"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_winit = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets" }
iced_wgpu = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets" }
iced = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets", features = ["svg", "image"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_repr = "0.1.6"
toml = "0.5.8"
version-compare = "0.0.11"
thiserror = "1.0.24"
freedesktop_entry_parser = "1.1.1"
dirs-next = "2.0.0"
walkdir = "2.3.1"
nfd2 = "0.2.3"
# iced_aw = { git = "https://github.com/kaiden42/iced_aw", default-features = false, features = ["color_picker"] }