[package]
name = "desktop"
version = "0.1.0"
authors = ["leang27 <hangleang127@gmail.com>"]
edition = "2018"
description = "Desktop GUI for KOOMPI OS"
license = "MIT"
repository = "https://github.com/koompi/koompi-desktop"
readme = "README.md"
keywords = ["gui", "ui", "desktop", "shell", "desktop-shell"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_winit = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets" }
iced_wgpu = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets" }
iced_style = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets"}
iced = { git = "https://github.com/koompi/iced.git", branch = "custom-widgets", features = ["svg", "image"] }
libkoompi = { git = "https://github.com/koompi/libkoompi.git", branch = "main" }
nfd2 = "0.3.0"
tauri-dialog = "0.1.0"
# iced_aw = { git = "https://github.com/kaiden42/iced_aw", default-features = false, features = ["color_picker"] }