[package]
name = "panel"
version = "0.1.0"
authors = ["veasnama <maveasnalearntosolve@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_wgpu = {git = "https://github.com/koompi/iced.git", branch="winit_strut"}
iced_winit = {git = "https://github.com/koompi/iced.git", branch="winit_strut"}
iced_graphics = {git = "https://github.com/koompi/iced.git", branch="winit_strut"}
iced = {git = "https://github.com/koompi/iced.git", branch="winit_strut", features=["tokio", "svg"]}
env_logger = "0.8.3"
futures = "*"
chrono = "0.4"
battery = "0.7.8"
