[package]
name = "panel"
version = "0.1.0"
authors = ["veasnama <maveasnalearntosolve@gmail>"]
edition = "2018"
build  = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_wgpu = {git = "https://github.com/koompi/iced.git", branch="winit_strut"}
iced_winit = {git = "https://github.com/koompi/iced.git", branch="winit_strut"}
iced = {git = "https://github.com/koompi/iced.git", branch="winit_strut", features=["tokio", "svg"]}
libkoompi = { git="https://github.com/koompi/libkoompi", branch="main" }
futures = "*"
chrono = "0.4"
battery = "0.7.8"
async-std = "1.9.0"
x11rb = {version="0.8.1", features=["allow-unsafe-code", "present"]}
[build-dependencies]
cc = "1.0"